# oath

./: CHANGELOG.md  LICENSE  README.md  cabal.project  oath.cabal
.github/workflows/: haskell.yml
benchmarks/: bench.hs
src/: Oath.hs
tests/: test.hs
