cabal-version:      2.4
name:               oath
version:            0.0

-- A short (one-line) description of the package.
synopsis:           Composable concurrent computation done right

-- A longer description of the package.
description:        See README.md for details

-- A URL where users can report bugs.
bug-reports:        https://github.com/fumieval/oath

-- The license under which the package is released.
license:            BSD-3-Clause
author:             Fumiaki Kinoshita
maintainer:         fumiexcel@gmail.com

-- A copyright notice.
copyright:          Copyright (c) 2021 Fumiaki Kinoshita
category:           Concurrency
extra-source-files: CHANGELOG.md, README.md

source-repository head
  type: git
  location: https://github.com/fumieval/oath.git

library
    exposed-modules: Oath
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.1.0 && <4.17, stm, stm-delay
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -Wcompat

test-suite test
    build-depends: base >=4.14.1.0
        , futures
        , unsafe-promises
        , promise
        , oath
        , async
        , streamly
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    default-language: Haskell2010
    main-is: test.hs
    ghc-options: -Wall -Wcompat

benchmark bench
    type:                exitcode-stdio-1.0
    main-is:             bench.hs
    hs-source-dirs:      benchmarks
    build-depends:       base, tasty-bench, oath, async, streamly
    ghc-options:         -Wall -threaded -O2
    default-language:    Haskell2010
